# data-parser

./: LICENSE  README.md  setup.cfg
docs/data_parser/: DataSource.html  index.html
src/data_parser/: DataSource.py
