[metadata]
name = data_parser
version = 0.0.2
author = Lee Zhi Yong
author_email = zhiyongengineering@email.com
description = Data parser to parse newline delimited logs into tabular format.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
install_requires = 
    pandas
python_requires = >=3

[options.extras_require]
pyspark = pyspark

[options.packages.find]
where = src
